<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyTelephone" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Ads-A8-bRk">
                                <rect key="frame" x="38" y="73" width="300" height="220"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PsX-7U-HXt">
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="53.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="username"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SzM-lw-MPz">
                                        <rect key="frame" x="0.0" y="83.5" width="300" height="53"/>
                                        <accessibility key="accessibilityConfiguration" identifier="password"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="password"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JJm-2l-hbM">
                                        <rect key="frame" x="0.0" y="166.5" width="300" height="53.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                        <state key="normal" title="Login Button"/>
                                        <connections>
                                            <action selector="logginButtonWasToucheUpInsideSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tQP-lm-oVR"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="220" id="hOi-6H-cER"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="Ads-A8-bRk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="53" id="sac-HY-JH1"/>
                            <constraint firstItem="Ads-A8-bRk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xLh-sI-Jbl"/>
                            <constraint firstItem="Ads-A8-bRk" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.8" id="zvF-Oj-kFd"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="passwordTextField" destination="SzM-lw-MPz" id="2LU-rc-DAJ"/>
                        <outlet property="usernameTextField" destination="PsX-7U-HXt" id="B3C-YI-I4K"/>
                        <segue destination="jG6-Mt-IVv" kind="show" identifier="ShowItemList" id="lY3-I8-hqL"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="49" y="34"/>
        </scene>
        <!--Music View Controller-->
        <scene sceneID="euY-I2-92Z">
            <objects>
                <viewController storyboardIdentifier="MusicViewController" id="jG6-Mt-IVv" customClass="MusicViewController" customModule="MyTelephone" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="k3T-gs-td6">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WUl-yo-7b0">
                                <rect key="frame" x="0.0" y="115" width="375" height="552"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MusicCell" textLabel="fJb-ka-Fnw" detailTextLabel="qIL-UL-vhE" rowHeight="71" style="IBUITableViewCellStyleSubtitle" id="Wre-Ve-Icf">
                                        <rect key="frame" x="0.0" y="28" width="375" height="71"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wre-Ve-Icf" id="Rje-RW-p1a">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="70.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fJb-ka-Fnw">
                                                    <rect key="frame" x="15" y="15" width="33.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qIL-UL-vhE">
                                                    <rect key="frame" x="15" y="38.5" width="44" height="14.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="jG6-Mt-IVv" id="d8P-6I-d1Y"/>
                                    <outlet property="delegate" destination="jG6-Mt-IVv" id="PjK-hr-XgL"/>
                                </connections>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Music" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3j1-XX-ju6">
                                <rect key="frame" x="165" y="34" width="45.5" height="36"/>
                                <accessibility key="accessibilityConfiguration" identifier="MusicLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="36" id="Pgb-MG-6ot"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="musicView">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="3j1-XX-ju6" firstAttribute="centerX" secondItem="k3T-gs-td6" secondAttribute="centerX" id="4of-l1-86m"/>
                            <constraint firstItem="3j1-XX-ju6" firstAttribute="top" secondItem="ihB-uV-YhF" secondAttribute="top" constant="14" id="CYq-u9-OS3"/>
                            <constraint firstItem="WUl-yo-7b0" firstAttribute="leading" secondItem="ihB-uV-YhF" secondAttribute="leading" id="QbD-Ef-avh"/>
                            <constraint firstItem="WUl-yo-7b0" firstAttribute="top" secondItem="ihB-uV-YhF" secondAttribute="top" constant="95" id="TQL-8a-bm5"/>
                            <constraint firstItem="WUl-yo-7b0" firstAttribute="trailing" secondItem="ihB-uV-YhF" secondAttribute="trailing" id="YEV-5u-myS"/>
                            <constraint firstItem="WUl-yo-7b0" firstAttribute="bottom" secondItem="ihB-uV-YhF" secondAttribute="bottom" id="fh1-a7-3SV"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="ihB-uV-YhF"/>
                    </view>
                    <connections>
                        <outlet property="tableView" destination="WUl-yo-7b0" id="EKa-vb-mUT"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fhD-tN-4gj" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="869.60000000000002" y="33.733133433283363"/>
        </scene>
    </scenes>
</document>
